--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataViz</title>
 
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>welcome</h1>
