--- a/index.html
+++ b/index.html
@@ -4,10 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DataViz</title>
-
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evSX huddled7su3YrYtEC9zvJyqZt0jIWcP0YWjGE3oc/NoIhIgvFwCrKqF78zExqEkQv9YCqico9VuM6UonlqAWCSWkT99Y7uONaZK3z" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/065d7448de.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>welcome</h1>
+    <nav class="nav nav-pills justify-content-center">
+        <ul class="nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#projects" class="nav-link">Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </nav>>
+    <div class="container-fluid" style="background-image: url('images/image\ 2.jpg'); background-size: cover; background-position: center; height: 100vh;">
+    </div>  
+    <div class="container">
+       <!--Welcome Section-->
+       <section id="welcome-section">
+            <h1>Hello I am Ismael</h1>
+            <p><i>a software engineer</i></p>
+            <small><a href="https://docs.google.com/document/d/1_SqCI3OZOBYQEuhl1GNhzsUDY1su2UCzKi0rGLbhIe8/edit?usp=sharing" target="_blank"></a>Resume</small>
+       </section>
+
+       <section id="about" class="about-section">
+        <h2>About Me</h2>
+        <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
+      </section>
+       
+       <!--projects section-->
+       <section id="projects" class="projects-section">
+            <h2 class="projects-section-header">Here is where my Projects will be</h2>
+
+            <div class="projects-grid">
+                <a href="https://github.com/Isma3l-19/data_viz" target="_blank" class="project project-tittle"></a>  
+            </div>
+
+            <a href="https://codepen.io/FreeCodeCamp/" class="btn btn-show-all" target="_blank">Show all<i
+                class="fas fa-chevron-right"></i></a>
+
+       </section>
+
+       <!--contact section-->
+       <section id="contact">
+        <h1>Let's work together...</h1>
+        <p><i>What music do you listen to when you code</i></p>
+        <ul>
+            <li>
+                <a href="https://www.linkedin.com/in/ismael-nyambu-776037279/" target="_blank">
+                    <i class="social-icon fa fa-linkedin-square"style="font-size:24px" class="fa">&#xf08c;></i>LinkedIn</a>
+            </li>
+            <li>
+                <a href="mailto:ismaelnyambu.99@gmail.com">
+                    <i class="social-icon fa-solid fa-envelope fa-xl"></i> Send an email</a>
+            </li>
+            <li>
+                <a href="https://github.com/Isma3l-19" target="_blank">
+                    <i class="social-icon fa-brands fa-github fa-xl"></i>Github</a>                
+            </li>
+        </ul>
+       </section>
+    </div>
+
+    <footer id="footer">
+        <p>
+            **This is just a placeholder until I learn more and make more responsive projects
+        </p>
+        <span>&#169; Created by Ismael</span>
+    </footer>
 </body>
 </html>
