--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                 <a href="https://github.com/Isma3l-19/data_viz" target="_blank" class="project project-tittle"></a>  
             </div>
 
-            <a href="https://codepen.io/FreeCodeCamp/" class="btn btn-show-all" target="_blank">Show all<i
-                class="fas fa-chevron-right"></i></a>
-
        </section>
 
        <!--contact section-->
@@ -56,7 +53,7 @@
         <ul>
             <li>
                 <a href="https://www.linkedin.com/in/ismael-nyambu-776037279/" target="_blank">
-                    <i class="social-icon fa fa-linkedin-square"style="font-size:24px" class="fa">&#xf08c;></i>LinkedIn</a>
+                    <i class="social-icon fa fa-linkedin-square"></i>LinkedIn</a>
             </li>
             <li>
                 <a href="mailto:ismaelnyambu.99@gmail.com">
