--- a/index.html
+++ b/index.html
@@ -1,77 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataViz</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evSX huddled7su3YrYtEC9zvJyqZt0jIWcP0YWjGE3oc/NoIhIgvFwCrKqF78zExqEkQv9YCqico9VuM6UonlqAWCSWkT99Y7uONaZK3z" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/065d7448de.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="nav nav-pills justify-content-center">
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#projects" class="nav-link">Work</a>
-          </li>
-          <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
-          </li>
-        </ul>
-      </nav>>
-    <div class="container-fluid" style="background-image: url('images/image\ 2.jpg'); background-size: cover; background-position: center; height: 100vh;">
-    </div>  
-    <div class="container">
-       <!--Welcome Section-->
-       <section id="welcome-section">
-            <h1>Hello I am Ismael</h1>
-            <p><i>a software engineer</i></p>
-            <small><a href="https://docs.google.com/document/d/1_SqCI3OZOBYQEuhl1GNhzsUDY1su2UCzKi0rGLbhIe8/edit?usp=sharing" target="_blank"></a>Resume</small>
-       </section>
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+  crossorigin="anonymous"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+  rel="stylesheet"
+/>
+<!-- START NAV -->
 
-       <section id="about" class="about-section">
-        <h2>About Me</h2>
-        <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
-      </section>
-       
-       <!--projects section-->
-       <section id="projects" class="projects-section">
-            <h2 class="projects-section-header">Here is where my Projects will be</h2>
+<nav id="navbar" class="nav">
+  <ul class="nav-list">
+    <li>
+      <a href="#welcome-section">About</a>
+    </li>
+    <li>
+      <a href="#projects">Work</a>
+    </li>
+    <li>
+      <a href="#contact">Contact</a>
+    </li>
+  </ul>
+</nav>
 
-            <div class="projects-grid">
-                <a href="https://github.com/Isma3l-19/data_viz" target="_blank" class="project project-tittle"></a>  
-            </div>
+<!-- END NAV -->
 
-       </section>
+<!-- START WELCOME SECTION -->
 
-       <!--contact section-->
-       <section id="contact">
-        <h1>Let's work together...</h1>
-        <p><i>What music do you listen to when you code</i></p>
-        <ul>
-            <li>
-                <a href="https://www.linkedin.com/in/ismael-nyambu-776037279/" target="_blank">
-                    <i class="social-icon fa fa-linkedin-square"></i>LinkedIn</a>
-            </li>
-            <li>
-                <a href="mailto:ismaelnyambu.99@gmail.com">
-                    <i class="social-icon fa-solid fa-envelope fa-xl"></i> Send an email</a>
-            </li>
-            <li>
-                <a href="https://github.com/Isma3l-19" target="_blank">
-                    <i class="social-icon fa-brands fa-github fa-xl"></i>Github</a>                
-            </li>
-        </ul>
-       </section>
-    </div>
+<section id="welcome-section" class="welcome-section">
+  <h1>Hey I am Ismael</h1>
+  <p>a software engineer</p>
+  <h2>About Me</h2>
+  <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
+</section>
 
-    <footer id="footer">
-        <p>
-            **This is just a placeholder until I learn more and make more responsive projects
-        </p>
-        <span>&#169; Created by Ismael</span>
-    </footer>
-</body>
-</html>
+</section>
+
+<!-- END WELCOME SECTION -->
+
+<!-- START PROJECTS SECTION -->
+
+<section id="projects" class="projects-section">
+  <h2 class="projects-section-header">These are some of my projects</h2>
+
+  <div class="projects-grid">
+    <a
+      href="https://github.com/Isma3l-19/data_viz"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="images/Screenshot 2024-05-09 165048.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        DataViz
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
+   
+  </div>
+
+  <a
+    href="https://codepen.io/FreeCodeCamp/"
+    class="btn btn-show-all"
+    target="_blank"
+    >Show all<i class="fas fa-chevron-right"></i
+  ></a>
+</section>
+
+<!-- END PROJECTS SECTION -->
+
+<!-- START CONTACT SECTION -->
+
+<section id="contact" class="contact-section">
+  <div class="contact-section-header">
+    <h2>Let's work together...</h2>
+    <p>How do you take your coffee?</p>
+  </div>
+  <div class="contact-links">
+    <a
+      id="profile-link"
+      href="https://www.instagram.com/_.isma3l_/"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-instagram "></i> Instagram</a
+    >
+    <a
+      id="profile-link"
+      href="https://github.com/Isma3l-19"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-github"></i> GitHub</a
+    >
+    <a href="mailto:ismaelnyambu.99@gmail.com" class="btn contact-details"
+      ><i class="fas fa-at"></i> Send a mail</a
+    >
+    <a href="tel:+254 703136896" class="btn contact-details"
+      ><i class="fas fa-mobile-alt"></i> Call me</a
+    >
+  </div>
+</section>
+
+<!-- END CONTACT SECTION -->
+
+<!-- START FOOTER SECTION -->
+
+<footer>
+  <p>
+    **This is just a placeholder until I learn more and make more responsive projects
+  </p>
+  <p>
+    &copy; Created by Ismael
+  </p>
+</footer>
+
+<!-- END FOOTER SECTION -->
