--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <section id="welcome-section" class="welcome-section">
   <h1>Hey I am Ismael</h1>
-  <p>a software engineer</p>
+  <p>a Software Engineer</p>
   <h2>About Me</h2>
   <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
 </section>
@@ -46,7 +46,7 @@
 <!-- START PROJECTS SECTION -->
 
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">These are some of my projects</h2>
+  <h2 class="projects-section-header">Here is one of my projects;</h2>
 
   <div class="projects-grid">
     <a
