--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     >
       <img
         class="project-image"
-        src="images/Screenshot 2024-05-09 165048.png"
+        src="images/home.png"
         alt="project"
       />
       <p class="project-title">
