--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <p>a Software Engineer</p>
   <h2>About Me</h2>
   <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
+  <small><a href="https://docs.google.com/document/d/1_SqCI3OZOBYQEuhl1GNhzsUDY1su2UCzKi0rGLbhIe8/edit?usp=sharing" target="_blank">Resume</a></small>
 </section>
 
 </section>
