--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-  integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-  crossorigin="anonymous"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
-  rel="stylesheet"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
-  rel="stylesheet"
-/>
-<!-- START NAV -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
+  <!-- Other head elements (title, meta tags, etc.) go here -->
+</head>
+<body>
+  <!-- START NAV -->
 
 <nav id="navbar" class="nav">
   <ul class="nav-list">
@@ -30,7 +27,7 @@
 
 <!-- END NAV -->
 
-<!-- START WELCOME SECTION -->
+ <!-- START WELCOME SECTION -->
 
 <section id="welcome-section" class="welcome-section">
   <h1>Hey I am Ismael</h1>
@@ -44,7 +41,8 @@
 
 <!-- END WELCOME SECTION -->
 
-<!-- START PROJECTS SECTION -->
+
+ <!-- START PROJECTS SECTION -->
 
 <section id="projects" class="projects-section">
   <h2 class="projects-section-header">Here is one of my projects;</h2>
@@ -73,7 +71,8 @@
 
 <!-- END PROJECTS SECTION -->
 
-<!-- START CONTACT SECTION -->
+
+  <!-- START CONTACT SECTION -->
 
 <section id="contact" class="contact-section">
   <div class="contact-section-header">
@@ -106,15 +105,14 @@
 
 <!-- END CONTACT SECTION -->
 
-<!-- START FOOTER SECTION -->
-
-<footer>
-  <p>
-    **This is just a placeholder until I learn more and make more responsive projects
-  </p>
-  <p>
-    &copy; Created by Ismael
-  </p>
-</footer>
-
-<!-- END FOOTER SECTION -->
+  <footer>
+    <p>
+      **This is just a placeholder until I learn more and make more responsive projects
+    </p>
+    <p>
+      &copy; Created by Ismael
+    </p>
+  
+  </footer>
+</body>
+</html>
