--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
+  <link href="https://unsplash.com/photos/geometric-shape-digital-wallpaper-oyXis2kALVg" rel="stylesheet">
   <!-- Other head elements (title, meta tags, etc.) go here -->
 </head>
 <body>
