--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
   <link href="https://unsplash.com/photos/geometric-shape-digital-wallpaper-oyXis2kALVg" rel="stylesheet">
+  <style>
+    body {
+      background: url(background2.jpg);
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  </style>
   <!-- Other head elements (title, meta tags, etc.) go here -->
 </head>
 <body>
