--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
-  <link href="https://unsplash.com/photos/geometric-shape-digital-wallpaper-oyXis2kALVg" rel="stylesheet">
   <style>
     body {
-      background: url(background2.jpg);
+      background: url("images/background2.jpg");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
