--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
+
+    <a
+      href="https://github.com/Isma3l-19/weather_app"
+      target="_blank"
+      class="project project-tile"
+    >
+      <img
+        class="project-image"
+        src="images/nairobi.png"
+        alt="project"
+      />
+      <p class="project-title">
+        <span class="code">&lt;</span>
+        Weather App
+        <span class="code">&#47;&gt;</span>
+      </p>
+    </a>
    
   </div>
 
