--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  <!-- START PROJECTS SECTION -->
 
 <section id="projects" class="projects-section">
-  <h2 class="projects-section-header">Here is one of my projects;</h2>
+  <h2 class="projects-section-header">Here is some of my projects;</h2>
 
   <div class="projects-grid">
     <a
