--- a/index.html
+++ b/index.html
@@ -1,133 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <!-- Other head elements (title, meta tags, etc.) go here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ismael Nyambu - Backend Developer</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    <!-- FontAwesome for additional icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- START NAV -->
 
-<nav id="navbar" class="nav">
-  <ul class="nav-list">
-    <li>
-      <a href="#welcome-section">About</a>
-    </li>
-    <li>
-      <a href="#projects">Work</a>
-    </li>
-    <li>
-      <a href="#contact">Contact</a>
-    </li>
-  </ul>
-</nav>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Ismael Nyambu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <!-- Dark/Light Mode Toggle -->
+                        <button id="theme-toggle-btn" class="btn btn-outline-light">
+                            <i id="theme-icon" class="bi bi-brightness-high-fill"></i>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-<!-- END NAV -->
+    <header class="text-center bg-dark text-white py-5">
+        <div class="container">
+            <h1>Hi, I'm Ismael Nyambu - Backend Developer</h1>
+            <p id="typing-animation"></p>
+        </div>
+    </header>
 
- <!-- START WELCOME SECTION -->
+    <main class="container py-5">
+        <!-- About Section -->
+        <section id="about">
+            <h2 class="text-center">About Me</h2>
+            <p class="text-center">I am a Backend Developer with a passion for building robust and efficient systems. Skilled in Python, Flask, and JavaScript, I enjoy working on backend technologies and collaborating with teams to deliver exceptional solutions.</p>
+        </section>
 
-<section id="welcome-section" class="welcome-section">
-  <h1>Hey I am Ismael</h1>
-  <p>a Software Engineer</p>
-  <h2>About Me</h2>
-  <p>A dedicated and enthusiastic software engineering student with a strong foundation in programming languages such as Python, C and JavaScript. Skilled in web development, DevOps practices, source code management and Bash scripting. Eager to contribute effectively as a software engineer in a dynamic and collaborative environment, leveraging coding skills to solve real-world problems and pursue continuous learning and growth in the field.</p>
-  <small><a href="resume/Resume-1.pdf" target="_blank">Resume</a></small>
-</section>
+        <section id="projects" class="py-5">
+            <h2 class="text-center">Projects</h2>
 
-</section>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Quiz App</h3>
+                            <p class="card-text">A full-stack quiz app developed with Flask and JavaScript. It features a user-friendly interface for answering quiz questions, along with real-time feedback.</p>
+                            <a href="https://github.com/Isma3l-19/quiz_app" target="_blank" class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Blog Post App</h3>
+                            <p class="card-text">A blogging platform where users can create, edit, and delete posts. Backend powered by Flask, with responsive frontend using JavaScript and Bootstrap.</p>
+                            <a href="https://github.com/Isma3l-19/blog_post" target="_blank" class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<!-- END WELCOME SECTION -->
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Weather App</h3>
+                            <p class="card-text">A weather forecast app using APIs to display real-time weather information.</p>
+                            <a href="https://github.com/Isma3l-19/weather_app" target="_blank" class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">Data Visualization App</h3>
+                            <p class="card-text">A data visualization dashboard built with Plotly.js, Python, and JavaScript for creating interactive visualizations.</p>
+                            <a href="https://github.com/Isma3l-19/data_viz" target="_blank" class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- Skills Section -->
+        <section id="skills" class="py-5">
+            <h2 class="text-center">Skills</h2>
+            <div class="row text-center">
+                <div class="col-md-3 mb-4">
+                    <i class="fab fa-python fa-3x"></i>
+                    <p>Python</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fab fa-js-square fa-3x"></i>
+                    <p>JavaScript</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fas fa-feather-alt fa-3x"></i>
+                    <p>Django</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fas fa-code fa-3x"></i>
+                    <p>Flask</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fab fa-git-alt fa-3x"></i>
+                    <p>Git</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fas fa-database fa-3x"></i>
+                    <p>SQL & Databases</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fas fa-terminal fa-3x"></i>
+                    <p>Bash Scripting</p>
+                </div>
+                <div class="col-md-3 mb-4">
+                    <i class="fas fa-file-code fa-3x"></i>
+                    <p>Jinja2</p>
+                </div>
+            </div>
+        </section>
 
- <!-- START PROJECTS SECTION -->
+        <!-- Contact Section -->
+        <section id="contact" class="contact-section py-5 text-center">
+            <div class="contact-section-header mb-4">
+                <h2>Let's work together...</h2>
+                <p>How do you take your coffee?</p>
+            </div>
+            <div class="contact-links">
+                <a href="https://www.instagram.com/_.isma3l_/" target="_blank" class="btn btn-outline-primary contact-details me-3 mb-3">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://github.com/Isma3l-19" target="_blank" class="btn btn-outline-dark contact-details me-3 mb-3">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+                <a href="mailto:ismaelnyambu.99@gmail.com" class="btn btn-outline-success contact-details me-3 mb-3">
+                    <i class="fas fa-at"></i> Send an email
+                </a>
+                <a href="tel:+254703136896" class="btn btn-outline-info contact-details me-3 mb-3">
+                    <i class="fas fa-mobile-alt"></i> Call me
+                </a>
+            </div>
+        </section>
+    </main>
 
-<section id="projects" class="projects-section">
-  <h2 class="projects-section-header">Here is some of my projects;</h2>
+    <!-- Footer -->
+    <footer class="text-center bg-dark text-white py-3">
+        <p>Created by Ismael Nyambu - Connect with me on <a href="https://www.linkedin.com/in/ismael-nyambu/" target="_blank" class="text-white">LinkedIn</a></p>
+    </footer>
 
-  <div class="projects-grid">
-    <a
-      href="https://github.com/Isma3l-19/data_viz"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="images/home.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        DataViz
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-
-    <a
-      href="https://github.com/Isma3l-19/weather_app"
-      target="_blank"
-      class="project project-tile"
-    >
-      <img
-        class="project-image"
-        src="images/nairobi.png"
-        alt="project"
-      />
-      <p class="project-title">
-        <span class="code">&lt;</span>
-        Weather App
-        <span class="code">&#47;&gt;</span>
-      </p>
-    </a>
-   
-  </div>
-
-</section>
-
-<!-- END PROJECTS SECTION -->
-
-
-  <!-- START CONTACT SECTION -->
-
-<section id="contact" class="contact-section">
-  <div class="contact-section-header">
-    <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
-  </div>
-  <div class="contact-links">
-    <a
-      id="profile-link"
-      href="https://www.instagram.com/_.isma3l_/"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-instagram "></i> Instagram</a
-    >
-    <a
-      id="profile-link"
-      href="https://github.com/Isma3l-19"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-github"></i> GitHub</a
-    >
-    <a href="mailto:ismaelnyambu.99@gmail.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Send a mail</a
-    >
-    <a href="tel:+254 703136896" class="btn contact-details"
-      ><i class="fas fa-mobile-alt"></i> Call me</a
-    >
-  </div>
-</section>
-
-<!-- END CONTACT SECTION -->
-
-  <footer>
-    <p>
-      &copy; Created by Ismael
-    </p>
-  
-  </footer>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
